[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/vert_gate.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/objects/vert_gate.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "closed"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("left:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("left:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "opening"
length = 0.63
step = 0.13
tracks/0/type = "value"
tracks/0/path = NodePath("left:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.13, 0.26, 0.39, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("right:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.13, 0.26, 0.39, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 32 )

[node name="vert_gate" type="Node2D"]
script = ExtResource( 1 )

[node name="left" type="Sprite" parent="."]
position = Vector2( 0, 24 )
texture = ExtResource( 2 )
hframes = 5

[node name="right" type="Sprite" parent="."]
position = Vector2( 16, 24 )
texture = ExtResource( 2 )
hframes = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/closed = SubResource( 1 )
anims/open = SubResource( 2 )
anims/opening = SubResource( 3 )

[node name="solid_left" type="StaticBody2D" parent="."]
position = Vector2( -4, 24 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="solid_left"]
shape = SubResource( 4 )
disabled = true

[node name="solid_right" type="StaticBody2D" parent="."]
position = Vector2( 20, 24 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="solid_right"]
shape = SubResource( 4 )
disabled = true

[node name="act_left" type="Area2D" parent="."]
position = Vector2( -4, 24 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="act_left"]
shape = SubResource( 5 )

[node name="act_right" type="Area2D" parent="."]
position = Vector2( 20, 24 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="act_right"]
shape = SubResource( 5 )
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="act_left" to="." method="_on_act_left_body_entered"]
[connection signal="body_exited" from="act_left" to="." method="_on_act_left_body_exited"]
